add todolist view

--- a/todo/templates/registration/register.html
+++ b/todo/templates/registration/register.html
@@ -10,7 +10,7 @@
 </tr>
 <tr>
     <td>Password:</td>
-    <td><input name="password"><td>
+    <td><input type="password" name="password"><td>
 </tr>
 </table>
 
